home page update

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assests/css/normalize.css">
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="stylesheet" href="assests/fonts/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link>
+
 </head>
 <body>
 <!-- Here is our page's Header area (main Navigation area) -->
@@ -33,17 +36,142 @@
 <!-- Here is our page's main content -->
 <main>
     <section class="one"></section>
-    <section class="two"></section>
-    <section class="three"></section>
+    <section class="two">
+        <div></div>
+        <div>Email</div>
+        <div>Chat</div>
+        <div>Download CV</div>
+    </section>
+    <section class="three">
+        <div></div>
+        <div></div>
+    </section>
     <section class="four"></section>
     <section class="five"></section>
-    <section class="six"></section>
-    <section class="seven"></section>
-    <section class="eight"></section>
-    <section class="nine"></section>
+    <section class="six">
+        <div>
+            <div class="six_section_title"><h1>Udara San</h1></div>
+        </div>
+        <div></div>
+    </section>
+    <section class="seven">
+
+
+    </section>
+    <section class="eight">
+        <div class="eight_title">
+            <h2>Blog</h2>
+        </div>
+
+        <div class="blog-article">
+            <div class="blog-01">
+                <div class="blog-img-01">
+                </div>
+                <div class="blog-Title-01">
+                    Title
+                </div>
+                <div class="blog-description-01">
+                    Description
+                </div>
+            </div>
+            <div class="blog-02">
+                <div class="blog-img-02">
+                </div>
+                <div class="blog-Title-02">
+                    Title
+                </div>
+                <div class="blog-description-02">
+                    Description
+                </div>
+            </div>
+            <div class="blog-03">
+                <div class="blog-img-03">
+                </div>
+                <div class="blog-Title-03">
+                    Title
+                </div>
+                <div class="blog-description-03">
+                    Description
+                </div>
+            </div>
+
+        </div>
+        <div class="www">
+            <input type="click" value="READ MORE">
+        </div>
+
+
+    </section>
+    <section class="nine">
+        <div class="newsLetter">
+            <h4>SUBSCRIBE TO NEWS LETTER</h4>
+            <p>Get all the latest information on Events, Sales and Offers. Sign up for
+                Newsletter today.</p>
+        </div>
+        <div class="subscription_box">
+            <div class="email">
+                <input type="text" placeholder="yourmail@gmail.com" name="mail" required>
+            </div>
+            <div class="submitBtn">
+                <input type="submit" value="SUBSCRIBE">
+            </div>
+        </div>
+    </section>
 </main>
 <!-- And here is our main footer that is used across all the pages of our website -->
-<footer><h1>This is Footer area</h1></footer>
+<footer>
+    <div class="links_area">
+        <div class="column-1">
+            <h4>WORKING DAYS & HOURS</h4>
+            <p>Mon - Fri / 9:00AM - 8:00PM</p>
+            <p>Sat - Sun / 9:00AM - 2:00PM</p>
+        </div>
+        <div class="column-2">
+            <h4>CONTACT ME</h4>
+            <p>ADDRESS:<br>
+                1234 Street Name, City, England</p>
+            <p>PHONE:<br>
+                Toll Free (123) 456-7890</p>
+            <p>EMAIL:<br>
+                mail@example.com</p>
+        </div>
+        <div class="column-3">
+            <h4>SERVICES</h4>
+            <a href="#">Web Development</a>
+            <a href="#">Software Development</a>
+            <a href="#">Graphic Designing</a>
+            <a href="#">Video Editing</a>
+            <a href="#">SEO Services</a>
+            <a href="#">Apps Development</a>
+        </div>
+        <div class="column-4">
+            <h4>SOCIAL MEDIA</h4>
+            <a href="#"><img src="assests/img/facebook.svg"></a>
+            <a href="#"><img src="assests/img/twitter.svg"></a>
+            <a href="#"><img src="assests/img/youtube.svg"></a>
+            <a href="#"><img src="assests/img/instagram.svg"></a>
+            <a href="#"> <img src="assests/img/whatsapp.svg"></a>
+            <a href="#"><img src="assests/img/linkedin.svg"></a>
+        </div>
+    </div>
+    <div class="footer_menu">
+        <div>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT ME</a>
+            <a href="#">SKILS</a>
+            <a href="#">EDUCATION</a>
+            <a href="#">PROJECTS</a>
+            <a href="#">RECOMMENDATION</a>
+            <a href="#">BLOG</a>
+            <a href="#">CONTACT</a>
+        </div>
+
+    </div>
+    <div class="developer">
+        <p>Udara San Technologies. © 2020 All Rights Reserved</p>
+
+    </div>
+</footer>
 </body>
 
 </html>
