--- a/myweb/index.html
+++ b/myweb/index.html
@@ -23,7 +23,7 @@
 
         <ul>
             <li>ABOUT ME</li>
-            <li>SKILS</li>
+            <li>SKILLS</li>
             <li>EDUCATION</li>
             <li>PROJECTS</li>
             <li>RECOMMENDATION</li>
@@ -46,58 +46,193 @@
         <div></div>
         <div></div>
     </section>
-    <section class="four"></section>
-    <section class="five"></section>
+    <section class="four">
+        <div class="five_section_title">
+            <h2>Latest  Project</h2>
+        </div>
+    </section>
+    <section class="five">
+        <div class="five_section_title">
+            <h2>TOP 6 SKILLS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque ad dolores temporibus asperiores quod quo<br>
+                maxime totam. Aperiam sunt et doloremque rerum dolores in qui molestias quis quibusdam porro?</p>
+        </div>
+        <div class="skill-section">
+            <div class="skill-section-1">
+
+                <div class="skill-content-left">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-left"></div>
+                </div>
+                <div class="skill-icon-left">
+                    <img src="assests/img/instagram.svg">
+                </div>
+
+            </div>
+            <div class="skill-section-1">
+                <div class="skill-icon-right">
+                    <img src="assests/img/instagram.svg">
+                </div>
+                <div class="skill-content-right">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-right"></div>
+                </div>
+
+            </div>
+        </div>
+        <div class="skill-section">
+
+            <div class="skill-section-1">
+                <div class="skill-content-left">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-left"></div>
+                </div>
+                <div class="skill-icon-left">
+                    <img src="assests/img/instagram.svg">
+                </div>
+
+            </div>
+            <div class="skill-section-1">
+                <div class="skill-icon-right">
+                    <img src="assests/img/instagram.svg">
+                </div>
+                <div class="skill-content-right">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-right"></div>
+                </div>
+
+            </div>
+        </div>
+        <div class="skill-section">
+            <div class="skill-section-1">
+                <div class="skill-content-left">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-left"></div>
+                </div>
+                <div class="skill-icon-left">
+                    <img src="assests/img/instagram.svg">
+                </div>
+
+            </div>
+            <div class="skill-section-1">
+                <div class="skill-icon-right">
+                    <img src="assests/img/instagram.svg">
+                </div>
+                <div class="skill-content-right">
+                    <h4>Web Development</h4>
+                    <p>The graphic designing is most popular subject in this digital world<br>
+                        The best designer can change everything of art work. I think graphic<br>
+                        designer like a magician in this field</p>
+                    <div class="progress-right"></div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="skill-btn">
+            <button type="button">READ MORE</button>
+        </div>
+
+    </section>
     <section class="six">
         <div>
-            <div class="six_section_title"><h1>Udara San</h1></div>
+            <div class="six_section_title">
+                <h2>EDUCATION</h2>
+            </div>
+            <div id="toggle1">
+                <h3>DEGREE</h3>
+            </div>
+            <div id="toggle2">
+                <h3>COURSES</h3></div>
+            <div id="toggle3">
+                <h3>GCE A/L </h3></div>
+            <div id="toggle4">
+                <h3>GCE O/L </h3></div>
         </div>
-        <div></div>
+        <div>
+            <div class="quotes-square">
+                <img src="assests/img/education%20section.jpg">
+            </div>
+        </div>
     </section>
     <section class="seven">
+        <div class="seven-title">
+            <H2>RECOMMENDATIONS</H2>
+        </div>
+        <div id="top-comma">
+            <img src="assests/img/inverted-commas%20(1).svg">
 
+        </div>
+        <div class="recommendation">
+            <p>Village did removed enjoyed explain nor ham saw calling talking. Securing as
+                informed declared or margaret.
+                Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
+                Between the for morning assured country believe. Request norland neither mistake for yet.
+                Between the for morning assured country believe.</p>
+        </div>
+        <div id="bottom-comma">
+            <img src="assests/img/inverted-commas%20(2).svg">
+        </div>
 
     </section>
     <section class="eight">
         <div class="eight_title">
-            <h2>Blog</h2>
+            <h2>BLOG</h2>
         </div>
-
         <div class="blog-article">
             <div class="blog-01">
                 <div class="blog-img-01">
+                    <img src="assests/img/udarasan_index_blog.svg">
                 </div>
                 <div class="blog-Title-01">
                     Title
                 </div>
                 <div class="blog-description-01">
-                    Description
+                    <p>Description description description description description description</p>
                 </div>
             </div>
             <div class="blog-02">
                 <div class="blog-img-02">
+                    <img src="assests/img/udarasan_index_blog.svg">
                 </div>
                 <div class="blog-Title-02">
                     Title
                 </div>
                 <div class="blog-description-02">
-                    Description
+                    <p>Description description description description description description</p>
                 </div>
             </div>
             <div class="blog-03">
                 <div class="blog-img-03">
+                    <img src="assests/img/udarasan_index_blog.svg">
                 </div>
                 <div class="blog-Title-03">
                     Title
                 </div>
                 <div class="blog-description-03">
-                    Description
+                    <p>Description description description description description description</p>
                 </div>
             </div>
 
         </div>
         <div class="www">
-            <input type="click" value="READ MORE">
+            <button type="button">READ MORE</button>
         </div>
 
 
