--- a/myweb/index.html
+++ b/myweb/index.html
@@ -35,21 +35,86 @@
 </header>
 <!-- Here is our page's main content -->
 <main>
-    <section class="one"></section>
+    <section class="one">
+        <div class="main-details">
+            <div class="wrap-image">
+                <img src="assests/img/udarasan-image.jpg">
+            </div>
+
+        </div>
+        <div class="my-details">
+
+        </div>
+
+        <div class="social-media"></div>
+    </section>
     <section class="two">
-        <div></div>
+        <div>
+
+        </div>
         <div>Email</div>
         <div>Chat</div>
         <div>Download CV</div>
     </section>
     <section class="three">
-        <div></div>
-        <div></div>
+        <div>
+            <div class="four_section_title">
+                <h2>ABOUT ME</h2>
+            </div>
+            <div class="left-side-content">
+                <p>I really love exploring what I don’t know. So I really want to<br>
+                    use in my time to help other people. Yes, I know that my DNA<br>
+                    is inserted into something different than the others. Then<br>
+                    I would like to use my DNA science to make this world<br>
+                    a better place.
+                </p>
+                <a href="index.html">Read More</a>
+            </div>
+        </div>
+        <div>
+            <div class="four_section_title">
+                <h2>PERSONAL INFORMATION</h2>
+            </div>
+            <div class="right-side-square">
+                <p>BIRTHDAY: 1998 FEB 12<br>
+                    MARITAL: SINGLE<br>
+                    NATIONALITY: SRI LANKAN(SOUTH ASIA)<br>
+                    PHONE: +9478-840-97-88<br>
+                    EMAIL: INFO@UDARASAN.LK
+                </p>
+
+
+            </div>
+
+        </div>
     </section>
     <section class="four">
-        <div class="five_section_title">
-            <h2>Latest  Project</h2>
+        <div>
+            <div class="four_section_title">
+                <h2>LATEST PROJECTS</h2>
+            </div>
+
+            <div class="left-side-content">
+                <h3>Project Explanation</h3>
+                <p>The final VIVA of the major project in the first semester of the<br>
+                    program BSc (Hons.) in Computer Science via GDSE concluded<br>
+                    on the 10th and 11th of October 2020.<br>
+
+                    <br>Project name - Courier Management System<br>
+                    Technologies - JavaFX + DBMS + Jasper Report<br>
+                    Programming Concepts - Programing Fundamentals | OOP
+                </p>
+                <div class="submitBtn">
+                    <button type="button">READ MORE</button>
+                </div>
+            </div>
         </div>
+        <div>
+            <div class="project-image">
+                <img src="assests/img/education%20section.jpg">
+            </div>
+        </div>
+
     </section>
     <section class="five">
         <div class="five_section_title">
