--- a/myweb/index.html
+++ b/myweb/index.html
@@ -7,14 +7,15 @@
     <meta name="keywords" content="Udara San Sri Lankan Tech Youtuber sri lankan web develpment">
     <meta name="description" content="The explorer | Founder of Udara San | S. Engineering | IOT |
      Micro-controller & Robotics | Web Designer & Developer | Multimedia ">
-    <meta name="theme-color" content="green">
+    <meta name="theme-color" content="#fed700">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assests/css/normalize.css">
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="stylesheet" href="assests/fonts/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <link>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Mada:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- Here is our page's Header area (main Navigation area) -->
@@ -43,18 +44,44 @@
 
         </div>
         <div class="my-details">
+            <h1>Udara San</h1>
+            <h2>THE EXPLORE</h2>
+            <h3>"Learning to listen is the essence of intelligent living!"</h3>
+            <h4>Full Stack Developer | IOT | Micro-controller & Robotics | Web Designer | Content Creator|</h4>
+
+
 
         </div>
 
-        <div class="social-media"></div>
+        <div class="social-media">
+            <img src="assests/img/instagram.svg">
+            <img src="assests/img/instagram.svg">
+            <img src="assests/img/instagram.svg">
+            <img src="assests/img/instagram.svg">
+            <img src="assests/img/instagram.svg">
+            <img src="assests/img/instagram.svg">
+        </div>
     </section>
     <section class="two">
         <div>
 
         </div>
-        <div>Email</div>
-        <div>Chat</div>
-        <div>Download CV</div>
+        <div>
+            <img src="assests/img/instagram.svg">
+            <div>
+                <a href="mailto:info@udarasan.lk">Send Mail</a>
+            </div>
+        </div>
+        <div><img src="assests/img/instagram.svg">
+            <div>
+                <a href="#">Chat With Me</a>
+            </div>
+        </div>
+        <div><img src="assests/img/instagram.svg">
+            <div>
+                <a href="assests/img/CURRICULUM%20VITAE%20UDARA.pdf">Download CV</a>
+            </div>
+        </div>
     </section>
     <section class="three">
         <div>
