make header navigation0 links click event

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -23,20 +23,20 @@
     <nav>
 
         <ul>
-            <li>ABOUT ME</li>
-            <li>SKILLS</li>
-            <li>EDUCATION</li>
-            <li>PROJECTS</li>
-            <li>RECOMMENDATION</li>
-            <li>BLOG</li>
-            <li>CONTACT</li>
+            <li><a href="#two">ABOUT ME</a></li>
+            <li><a href="#five">SKILLS</a></li>
+            <li><a href="#six">EDUCATION</a></li>
+            <li><a href="#four">PROJECTS</a></li>
+            <li><a href="#seven">RECOMMENDATION</a></li>
+            <li><a href="#eight">BLOG</a></li>
+            <li><a href="#eight">CONTACT</a></li>
 
         </ul>
     </nav>
 </header>
 <!-- Here is our page's main content -->
 <main>
-    <section class="one">
+    <section id="one">
         <div class="main-details">
             <div class="wrap-image">
                 <img src="assests/img/udarasan-image.jpg">
@@ -50,7 +50,6 @@
             <h4>Full Stack Developer | IOT | Micro-controller & Robotics | Web Designer | Content Creator|</h4>
 
 
-
         </div>
 
         <div class="social-media">
@@ -62,7 +61,7 @@
             <img src="assests/img/instagram.svg">
         </div>
     </section>
-    <section class="two">
+    <section id="two">
         <div>
 
         </div>
@@ -83,7 +82,7 @@
             </div>
         </div>
     </section>
-    <section class="three">
+    <section id="three">
         <div>
             <div class="four_section_title">
                 <h2>ABOUT ME</h2>
@@ -115,7 +114,7 @@
 
         </div>
     </section>
-    <section class="four">
+    <section id="four">
         <div>
             <div class="four_section_title">
                 <h2>LATEST PROJECTS</h2>
@@ -143,7 +142,7 @@
         </div>
 
     </section>
-    <section class="five">
+    <section id="five">
         <div class="five_section_title">
             <h2>TOP 6 SKILLS</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque ad dolores temporibus asperiores quod quo<br>
@@ -242,7 +241,7 @@
         </div>
 
     </section>
-    <section class="six">
+    <section id="six">
         <div>
             <div class="six_section_title">
                 <h2>EDUCATION</h2>
@@ -263,7 +262,7 @@
             </div>
         </div>
     </section>
-    <section class="seven">
+    <section id="seven">
         <div class="seven-title">
             <H2>RECOMMENDATIONS</H2>
         </div>
@@ -283,7 +282,7 @@
         </div>
 
     </section>
-    <section class="eight">
+    <section id="eight">
         <div class="eight_title">
             <h2>BLOG</h2>
         </div>
@@ -329,7 +328,7 @@
 
 
     </section>
-    <section class="nine">
+    <section id="nine">
         <div class="newsLetter">
             <h4>SUBSCRIBE TO NEWS LETTER</h4>
             <p>Get all the latest information on Events, Sales and Offers. Sign up for
