--- a/myweb/index.html
+++ b/myweb/index.html
@@ -271,11 +271,42 @@
 
         </div>
         <div class="recommendation">
-            <p>Village did removed enjoyed explain nor ham saw calling talking. Securing as
-                informed declared or margaret.
-                Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
-                Between the for morning assured country believe. Request norland neither mistake for yet.
-                Between the for morning assured country believe.</p>
+            <div class="text-animation">
+                <p>A did removed enjoyed explain nor ham saw calling talking. Securing as
+                    informed declared or margaret.
+                    Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
+                    Between the for morning assured country believe. Request norland neither mistake for yet.
+                    Between the for morning assured country believe.
+                </p>
+            </div>
+            <div class="text-animation">
+                <p>B did removed enjoyed explain nor ham saw calling talking. Securing as
+                    informed declared or margaret.
+                    Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
+                    Between the for morning assured country believe. Request norland neither mistake for yet.
+                    Between the for morning assured country believe.
+                </p>
+            </div>
+            <div class="text-animation">
+                <p>C did removed enjoyed explain nor ham saw calling talking. Securing as
+                    informed declared or margaret.
+                    Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
+                    Between the for morning assured country believe. Request norland neither mistake for yet.
+                    Between the for morning assured country believe.
+                </p>
+
+            </div>
+            <div class="text-animation">
+                <p>D did removed enjoyed explain nor ham saw calling talking. Securing as
+                    informed declared or margaret.
+                    Joy horrible moreover man feelings own shy. Request norland neither mistake for yet.
+                    Between the for morning assured country believe. Request norland neither mistake for yet.
+                    Between the for morning assured country believe.
+                </p>
+
+            </div>
+
+
         </div>
         <div id="bottom-comma">
             <img src="assests/img/inverted-commas%20(2).svg">
