add website owener name in to  main menu bar

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -20,19 +20,22 @@
 <body>
 <!-- Here is our page's Header area (main Navigation area) -->
 <header>
-    <nav>
+    <div class="main-menu">
+        <nav>
+            <ul class="WebName"><a href="index.html">Udara San</a></ul>
+            <ul>
+                <li><a href="#two">ABOUT ME</a></li>
+                <li><a href="#five">SKILLS</a></li>
+                <li><a href="#six">EDUCATION</a></li>
+                <li><a href="#four">PROJECTS</a></li>
+                <li><a href="#seven">RECOMMENDATION</a></li>
+                <li><a href="#eight">BLOG</a></li>
+                <li><a href="#eight">CONTACT</a></li>
 
-        <ul>
-            <li><a href="#two">ABOUT ME</a></li>
-            <li><a href="#five">SKILLS</a></li>
-            <li><a href="#six">EDUCATION</a></li>
-            <li><a href="#four">PROJECTS</a></li>
-            <li><a href="#seven">RECOMMENDATION</a></li>
-            <li><a href="#eight">BLOG</a></li>
-            <li><a href="#eight">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
 
-        </ul>
-    </nav>
 </header>
 <!-- Here is our page's main content -->
 <main>
@@ -375,6 +378,10 @@
         </div>
     </section>
 </main>
+<div class="scroll-to-top">
+    <a href="#one"><img src="assests/img/1200px-Top_Arrow.svg.png"></a>
+
+</div>
 <!-- And here is our main footer that is used across all the pages of our website -->
 <footer>
     <div class="links_area">
