Uplaod Web responsive

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Mada:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!-- Here is our page's Header area (main Navigation area) -->
@@ -23,7 +24,7 @@
     <div class="main-menu">
         <nav>
             <ul class="WebName"><a href="index.html">Udara San</a></ul>
-            <ul>
+            <ul class="navigations">
                 <li><a href="#two">ABOUT ME</a></li>
                 <li><a href="#five">SKILLS</a></li>
                 <li><a href="#six">EDUCATION</a></li>
@@ -56,12 +57,12 @@
         </div>
 
         <div class="social-media">
-            <img src="assests/img/instagram.svg">
-            <img src="assests/img/instagram.svg">
-            <img src="assests/img/instagram.svg">
-            <img src="assests/img/instagram.svg">
-            <img src="assests/img/instagram.svg">
-            <img src="assests/img/instagram.svg">
+            <img src="assests/img/008-facebook.svg">
+            <img src="assests/img/002-twitter.svg">
+            <img src="assests/img/001-youtube.svg">
+            <img src="assests/img/011-instagram.svg">
+            <img src="assests/img/010-linkedin.svg">
+            <img src="assests/img/013-whatsapp.svg">
         </div>
     </section>
     <section id="two">
@@ -69,17 +70,17 @@
 
         </div>
         <div>
-            <img src="assests/img/instagram.svg">
+            <img src="assests/img/email.png">
             <div>
                 <a href="mailto:info@udarasan.lk">Send Mail</a>
             </div>
         </div>
-        <div><img src="assests/img/instagram.svg">
+        <div><img src="assests/img/chat.png">
             <div>
                 <a href="#">Chat With Me</a>
             </div>
         </div>
-        <div><img src="assests/img/instagram.svg">
+        <div><img src="assests/img/icons8-download-48.png">
             <div>
                 <a href="assests/img/CURRICULUM%20VITAE%20UDARA.pdf">Download CV</a>
             </div>
@@ -134,13 +135,13 @@
                     Programming Concepts - Programing Fundamentals | OOP
                 </p>
                 <div class="submitBtn">
-                    <button type="button">READ MORE</button>
+                    <button type="button"><a href="projects.html">READ MORE</a> </button>
                 </div>
             </div>
         </div>
         <div>
             <div class="project-image">
-                <img src="assests/img/education%20section.jpg">
+                <img src="assests/img/cms-project-thumbnail.png">
             </div>
         </div>
 
@@ -155,7 +156,7 @@
             <div class="skill-section-1">
 
                 <div class="skill-content-left">
-                    <h4>Web Development</h4>
+                    <h4>HTML</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -171,7 +172,7 @@
                     <img src="assests/img/instagram.svg">
                 </div>
                 <div class="skill-content-right">
-                    <h4>Web Development</h4>
+                    <h4>CSS</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -184,7 +185,7 @@
 
             <div class="skill-section-1">
                 <div class="skill-content-left">
-                    <h4>Web Development</h4>
+                    <h4>JAVA SCRIPT</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -200,7 +201,7 @@
                     <img src="assests/img/instagram.svg">
                 </div>
                 <div class="skill-content-right">
-                    <h4>Web Development</h4>
+                    <h4>TYPE SCRIPT</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -212,7 +213,7 @@
         <div class="skill-section">
             <div class="skill-section-1">
                 <div class="skill-content-left">
-                    <h4>Web Development</h4>
+                    <h4>PHP</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -228,7 +229,7 @@
                     <img src="assests/img/instagram.svg">
                 </div>
                 <div class="skill-content-right">
-                    <h4>Web Development</h4>
+                    <h4>UI DESIGN</h4>
                     <p>The graphic designing is most popular subject in this digital world<br>
                         The best designer can change everything of art work. I think graphic<br>
                         designer like a magician in this field</p>
@@ -261,7 +262,7 @@
         </div>
         <div>
             <div class="quotes-square">
-                <img src="assests/img/education%20section.jpg">
+                <img src="assests/img/nelson-mandela.jpg">
             </div>
         </div>
     </section>
@@ -323,10 +324,10 @@
         <div class="blog-article">
             <div class="blog-01">
                 <div class="blog-img-01">
-                    <img src="assests/img/udarasan_index_blog.svg">
+                    <img src="assests/img/blog-01.jpg">
                 </div>
                 <div class="blog-Title-01">
-                    Title
+                    Stock Market
                 </div>
                 <div class="blog-description-01">
                     <p>Description description description description description description</p>
@@ -334,10 +335,10 @@
             </div>
             <div class="blog-02">
                 <div class="blog-img-02">
-                    <img src="assests/img/udarasan_index_blog.svg">
+                    <img src="assests/img/blog-02.jpg">
                 </div>
                 <div class="blog-Title-02">
-                    Title
+                    Air Filter
                 </div>
                 <div class="blog-description-02">
                     <p>Description description description description description description</p>
@@ -345,10 +346,10 @@
             </div>
             <div class="blog-03">
                 <div class="blog-img-03">
-                    <img src="assests/img/udarasan_index_blog.svg">
+                    <img src="assests/img/blog-03.jpg">
                 </div>
                 <div class="blog-Title-03">
-                    Title
+                    Export & Import Ban
                 </div>
                 <div class="blog-description-03">
                     <p>Description description description description description description</p>
@@ -379,7 +380,7 @@
     </section>
 </main>
 <div class="scroll-to-top">
-    <a href="#one"><img src="assests/img/1200px-Top_Arrow.svg.png"></a>
+    <a href="#"><img src="assests/img/1200px-Top_Arrow.svg.png"></a>
 
 </div>
 <!-- And here is our main footer that is used across all the pages of our website -->
@@ -420,14 +421,14 @@
     </div>
     <div class="footer_menu">
         <div>
-            <a href="#">HOME</a>
-            <a href="#">ABOUT ME</a>
-            <a href="#">SKILS</a>
-            <a href="#">EDUCATION</a>
-            <a href="#">PROJECTS</a>
-            <a href="#">RECOMMENDATION</a>
-            <a href="#">BLOG</a>
-            <a href="#">CONTACT</a>
+            <a href="index.html">HOME</a>
+            <a href="#two">ABOUT ME</a>
+            <a href="#five">SKILS</a>
+            <a href="#six">EDUCATION</a>
+            <a href="#four">PROJECTS</a>
+            <a href="#seven">RECOMMENDATION</a>
+            <a href="#eight">BLOG</a>
+            <a href="#eight">CONTACT</a>
         </div>
 
     </div>
