Project page linking part

--- a/myweb/projects.html
+++ b/myweb/projects.html
@@ -118,7 +118,7 @@
 
     <section id="projects-row-1">
         <div class="project-title">
-            <h2>HTML</h2>
+            <h2>HTML & CSS</h2>
         </div>
         <div class="pro-cat-row">
             <div class="project-frame">
@@ -138,19 +138,27 @@
             </div>
             <div class="button-row">
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+
+                    <button type="project-button">
+                        <a href="assests/projects/Assignment_1/Assignment_1/index.html">View Project </a>
+                    </button>
+
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_2/index.html">View Project </a>
+                        </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_3/Assignment_3/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_4/Assignment_4/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_5/Assignment_5/index.html">View Project </a>
+                    </button>
                 </div>
             </div>
 
@@ -178,19 +186,24 @@
             </div>
             <div class="button-row">
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_6/Assignment_6/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_7/Assignment_7/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_8/Assignment_8/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_9/Assignment_9/index.html">View Project </a>
+                    </button>
                 </div>
                 <div class="button-frame">
-                    <button type="project-button">View Project</button>
+                    <button type="project-button"><a href="assests/projects/Assignment_9/Assignment_9/index.html">View Project </a>
+                    </button>
                 </div>
             </div>
 
