--- a/myweb/index.html
+++ b/myweb/index.html
@@ -53,7 +53,6 @@
             <h3>"Learning to listen is the essence of intelligent living!"</h3>
             <h4>Full Stack Developer | IOT | Micro-controller & Robotics | Web Designer | Content Creator|</h4>
 
-
         </div>
 
         <div class="social-media">
@@ -163,13 +162,13 @@
                     <div class="progress-left"></div>
                 </div>
                 <div class="skill-icon-left">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/html.png">
                 </div>
 
             </div>
             <div class="skill-section-1">
                 <div class="skill-icon-right">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/css.png">
                 </div>
                 <div class="skill-content-right">
                     <h4>CSS</h4>
@@ -192,13 +191,13 @@
                     <div class="progress-left"></div>
                 </div>
                 <div class="skill-icon-left">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/js.png">
                 </div>
 
             </div>
             <div class="skill-section-1">
                 <div class="skill-icon-right">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/ts.png">
                 </div>
                 <div class="skill-content-right">
                     <h4>TYPE SCRIPT</h4>
@@ -220,13 +219,13 @@
                     <div class="progress-left"></div>
                 </div>
                 <div class="skill-icon-left">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/011-instagram.svg">
                 </div>
 
             </div>
             <div class="skill-section-1">
                 <div class="skill-icon-right">
-                    <img src="assests/img/instagram.svg">
+                    <img src="assests/img/011-instagram.svg">
                 </div>
                 <div class="skill-content-right">
                     <h4>UI DESIGN</h4>
@@ -411,12 +410,12 @@
         </div>
         <div class="column-4">
             <h4>SOCIAL MEDIA</h4>
-            <a href="#"><img src="assests/img/facebook.svg"></a>
-            <a href="#"><img src="assests/img/twitter.svg"></a>
-            <a href="#"><img src="assests/img/youtube.svg"></a>
-            <a href="#"><img src="assests/img/instagram.svg"></a>
+            <a href="https://web.facebook.com/udarasans"><img src="assests/img/facebook.svg"></a>
+            <a href="https://twitter.com/udarasan"><img src="assests/img/twitter.svg"></a>
+            <a href="https://www.youtube.com/udarasan/"><img src="assests/img/youtube.svg"></a>
+            <a href="https://www.instagram.com/udarasans/"><img src="assests/img/instagram.svg"></a>
             <a href="#"> <img src="assests/img/whatsapp.svg"></a>
-            <a href="#"><img src="assests/img/linkedin.svg"></a>
+            <a href="https://www.linkedin.com/in/udarasan/?lipi=urn%3Ali%3Apage%3Ad_flagship3_notifications%3BnzSn3SSTRX287sAyiBdEIQ%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_notifications-nav.settings_view_profile"><img src="assests/img/linkedin.svg"></a>
         </div>
     </div>
     <div class="footer_menu">
@@ -434,7 +433,6 @@
     </div>
     <div class="developer">
         <p>Udara San Technologies. © 2020 All Rights Reserved</p>
-
     </div>
 </footer>
 </body>
